change html inputs to allow settings modifications

--- a/views/pages/accueil_projet.ejs
+++ b/views/pages/accueil_projet.ejs
@@ -100,11 +100,19 @@
                     <div class="section1_div" id="temperature">
                         <div class="param_div">
                             <label>Min (°C)</label>
-                            <span class="param_value">18.3</span>
+                            <form type="" method=""> 
+                                <span class="param_value">
+                                    <input type="text" name="min_temp" value="18.3"/>
+                                </span>  
+                            </form>
                         </div>
                         <div class="param_div">
                             <label>Max (°C)</label>
-                            <span class="param_value">26</span>
+                            <form type="" method=""> 
+                                <span class="param_value">
+                                    <input type="text" name="max_temp" value="25.7"/>
+                                </span>  
+                            </form>
                         </div>
                     </div>
 
@@ -112,11 +120,19 @@
                     <div class="section1_div" id="ph">
                         <div class="param_div">
                             <label>Min</label>
-                            <span class="param_value">0</span>
+                            <form type="" method="post"> 
+                                <span class="param_value">
+                                    <input type="text" name="min_ph" value="0"/>
+                                </span>  
+                            </form>
                         </div>
                         <div class="param_div">
                             <label>Max</label>
-                            <span class="param_value">15</span>
+                            <form type="" method="post"> 
+                                <span class="param_value">
+                                    <input type="text" name="max_ph" value="14"/>
+                                </span>  
+                            </form>
                         </div>
                     </div>
 
@@ -178,7 +194,11 @@
                     <div class="section1_div" id="photo">
                         <div class="param_div">
                             <label>Photo (par jour)</label>
-                            <span class="param_value">0</span>
+                            <form type="" method="post"> 
+                                <span class="param_value">
+                                    <input type="text" name="freq_photo" value="1"/>
+                                </span>  
+                            </form>
                         </div>
                     </div>
                 </section>
