--- a/views/pages/accueil_projet.ejs
+++ b/views/pages/accueil_projet.ejs
@@ -150,7 +150,7 @@
                         <div id="param_div">
                             <form>
                                 <output class="param_value" id="range_value" name="resultat"></output>
-                                <input id="fert_range" type="range" name="d" list="tickmarks" min="0" max="100" step="0.5" oninput="resultat.value=parseInt(d.value)"/>
+                                <input class="range" type="range" name="d" list="tickmarks" min="0" max="100" step="0.5" oninput="resultat.value=parseInt(d.value)"/>
                             </form>  
 
                             <datalist id="tickmarks">
@@ -177,7 +177,7 @@
                         <div id="param_div">
                             <form>
                                 <output class="param_value" id="range_value" name="resultat"></output>
-                                <input id="fert_range" type="range" name="d" list="tickmarks" min="0" max="100" step="0.5" oninput="resultat.value=parseInt(d.value)"/>
+                                <input class="range" type="range" name="d" list="tickmarks" min="0" max="100" step="0.5" oninput="resultat.value=parseInt(d.value)"/>
                             </form>  
 
                             <datalist id="tickmarks">
